--- a/src/application/Book_Appointment.fxml
+++ b/src/application/Book_Appointment.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="796.0" style="-fx-background-color: yellow;" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Clinic_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="796.0" style="-fx-background-color: yellow;" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AppointmentsHandler">
    <children>
       <ImageView fitHeight="536.0" fitWidth="796.0" layoutY="-18.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -19,92 +21,79 @@
             <Image url="@Images/25694.png" />
          </image>
       </ImageView>
-      <Label layoutX="363.0" layoutY="46.0" prefHeight="66.0" prefWidth="240.0" text="Choose Department">
+      <Label layoutX="398.0" layoutY="44.0" prefHeight="66.0" prefWidth="240.0" text="Book Appoinment ">
          <font>
             <Font name="Calisto MT Bold Italic" size="30.0" />
          </font>
       </Label>
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="328.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="358.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/1642054.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="51.0" fitWidth="47.0" layoutX="305.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/1581820.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="309.0" layoutY="187.0" prefHeight="18.0" prefWidth="72.0" text="Allergists">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <Button layoutX="305.0" layoutY="129.0" mnemonicParsing="false" opacity="0.0" prefHeight="57.0" prefWidth="53.0" text="Button" />
-      <ImageView fitHeight="51.0" fitWidth="47.0" layoutX="615.0" layoutY="135.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/579689-200.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="591.0" layoutY="187.0" prefHeight="23.0" prefWidth="110.0" text="Dermatologists">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="66.0" fitWidth="81.0" layoutX="305.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/35219532-4ee08288-ff73-11e7-9f9c-0e874ea31ec5.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="301.0" layoutY="291.0" prefHeight="22.0" prefWidth="93.0" text="Gynecologists">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <Button layoutX="611.0" layoutY="138.0" mnemonicParsing="false" opacity="0.0" prefHeight="57.0" prefWidth="53.0" text="Button" />
-      <Button layoutX="311.0" layoutY="232.0" mnemonicParsing="false" opacity="0.0" prefHeight="57.0" prefWidth="53.0" text="Button" />
-      <ImageView fitHeight="51.0" fitWidth="47.0" layoutX="616.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/568-200.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="597.0" layoutY="291.0" prefHeight="22.0" prefWidth="93.0" text="Cardiologist">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <Button layoutX="612.0" layoutY="232.0" mnemonicParsing="false" opacity="0.0" prefHeight="57.0" prefWidth="53.0" text="Button" />
-      <ImageView fitHeight="57.0" fitWidth="66.0" layoutX="314.0" layoutY="335.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/doctor-gastroenterologist.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="281.0" layoutY="386.0" prefHeight="23.0" prefWidth="134.0" text="Gastroenterologists">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="57.0" fitWidth="53.0" layoutX="614.0" layoutY="331.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/585-200.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="600.0" layoutY="381.0" prefHeight="22.0" prefWidth="93.0" text="Neurologists">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="57.0" fitWidth="72.0" layoutX="474.0" layoutY="401.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Images/2464271.png" />
-         </image>
-      </ImageView>
-      <Button layoutX="617.0" layoutY="330.0" mnemonicParsing="false" opacity="0.0" prefHeight="57.0" prefWidth="53.0" text="Button" />
-      <Label layoutX="458.0" layoutY="456.0" prefHeight="24.0" prefWidth="110.0" text="Child Specialist">
-         <font>
-            <Font name="Calisto MT Bold" size="15.0" />
-         </font>
-      </Label>
-      <Button layoutX="477.0" layoutY="400.0" mnemonicParsing="false" opacity="0.0" prefHeight="57.0" prefWidth="53.0" text="Button" />
       <Button fx:id="Home" layoutX="766.0" mnemonicParsing="false" onAction="#home" opacity="0.0" prefHeight="30.0" prefWidth="30.0" text="Button" />
+      <ComboBox fx:id="descBox" layoutX="493.0" layoutY="243.0" prefWidth="150.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
+      <Label fx:id="o" layoutX="363.0" layoutY="297.0" />
+      <TextField fx:id="starttime" layoutX="493.0" layoutY="139.0" prefHeight="26.0" prefWidth="150.0" promptText="e.g (12:00)" style="-fx-background-radius: 10; -fx-background-color: #6accb2;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="endtime" layoutX="493.0" layoutY="192.0" prefHeight="26.0" prefWidth="150.0" promptText="e.g (12:00)" style="-fx-background-radius: 10; -fx-background-color: #6accb2;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="day" layoutX="493.0" layoutY="292.0" prefHeight="26.0" prefWidth="150.0" promptText="e.g 10" style="-fx-background-radius: 10; -fx-background-color: #6accb2;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="month" layoutX="493.0" layoutY="341.0" prefHeight="26.0" prefWidth="150.0" promptText="e.g (12)" style="-fx-background-radius: 10; -fx-background-color: #6accb2;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="year" layoutX="493.0" layoutY="390.0" prefHeight="26.0" prefWidth="150.0" promptText="e.g (2021)" style="-fx-background-radius: 10; -fx-background-color: #6accb2;">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="358.0" layoutY="139.0" prefHeight="26.0" prefWidth="79.0" text="Start Time">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="358.0" layoutY="192.0" prefHeight="26.0" prefWidth="79.0" text="End Time">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="358.0" layoutY="243.0" prefHeight="26.0" prefWidth="79.0" text="Service">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="358.0" layoutY="292.0" prefHeight="26.0" prefWidth="79.0" text="Day">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="358.0" layoutY="341.0" prefHeight="26.0" prefWidth="79.0" text="Month">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="358.0" layoutY="390.0" prefHeight="26.0" prefWidth="79.0" text="Year">
+         <font>
+            <Font name="System Bold Italic" size="14.0" />
+         </font>
+      </Label>
+      <Button layoutX="536.0" layoutY="444.0" mnemonicParsing="false" onAction="#AddAppointmentDetails" opacity="0.01" prefHeight="40.0" prefWidth="46.0" text="Button" />
+      <ImageView disable="true" fitHeight="40.0" fitWidth="44.0" layoutX="539.0" layoutY="444.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Images/152533.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
