//usecases updated according to documentation

--- a/src/application/AppointmentOptions.fxml
+++ b/src/application/AppointmentOptions.fxml
@@ -24,24 +24,24 @@
             <Font name="Calisto MT Bold Italic" size="30.0" />
          </font>
       </Label>
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="346.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="30.0" fitWidth="30.0" layoutX="346.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/1642054.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="51.0" fitWidth="47.0" layoutX="484.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="51.0" fitWidth="47.0" layoutX="484.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/icons8-hospital-room-24.png" />
          </image>
       </ImageView>
-      <Button layoutX="487.0" layoutY="144.0" mnemonicParsing="false" onAction="#Book_appointment" opacity="0.0" prefHeight="47.0" prefWidth="40.0" text="Button" />
       <Label layoutX="442.0" layoutY="192.0" prefHeight="22.0" prefWidth="134.0" text="Book Appointment">
          <font>
             <Font name="Calisto MT Bold" size="15.0" />
          </font>
       </Label>
+      <Button layoutX="487.0" layoutY="144.0" mnemonicParsing="false" onAction="#Book_appointment" opacity="0.0" prefHeight="47.0" prefWidth="40.0" text="Button" />
       <Button layoutX="440.0" layoutY="190.0" mnemonicParsing="false" onAction="#Book_appointment" opacity="0.0" prefHeight="1.0" prefWidth="134.0" text="Button" />
-      <ImageView fitHeight="57.0" fitWidth="47.0" layoutX="484.0" layoutY="224.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="57.0" fitWidth="47.0" layoutX="484.0" layoutY="224.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/cancel-appointment-1914420-1620337.png" />
          </image>
@@ -51,29 +51,29 @@
             <Font name="Calisto MT Bold" size="15.0" />
          </font>
       </Label>
-      <Button layoutX="489.0" layoutY="227.0" mnemonicParsing="false" onAction="#Cancel_appointment" opacity="0.0" prefHeight="39.0" prefWidth="40.0" text="Button" />
-      <ImageView fitHeight="47.0" fitWidth="54.0" layoutX="488.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="47.0" fitWidth="54.0" layoutX="488.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/medical-history.png" />
          </image>
       </ImageView>
+      <Button layoutX="489.0" layoutY="227.0" mnemonicParsing="false" onAction="#Cancel_appointment" opacity="0.0" prefHeight="39.0" prefWidth="40.0" text="Button" />
       <Label layoutX="442.0" layoutY="363.0" prefHeight="23.0" prefWidth="134.0" text="View Appointments">
          <font>
             <Font name="Calisto MT Bold" size="15.0" />
          </font>
       </Label>
-      <Button layoutX="485.0" layoutY="308.0" mnemonicParsing="false" onAction="#view_appointment" opacity="0.0" prefHeight="47.0" prefWidth="47.0" text="Button" />
       <Button layoutX="435.0" layoutY="268.0" mnemonicParsing="false" onAction="#Cancel_appointment" opacity="0.0" prefHeight="23.0" prefWidth="134.0" text="Button" />
+      <Button layoutX="485.0" layoutY="308.0" mnemonicParsing="false" onAction="#view_appointment" opacity="0.0" prefHeight="47.0" prefWidth="47.0" text="Button" />
       <Button layoutX="445.0" layoutY="362.0" mnemonicParsing="false" onAction="#view_appointment" opacity="0.0" prefHeight="23.0" prefWidth="134.0" text="Button" />
-      <Button fx:id="Home" layoutX="766.0" layoutY="-4.0" mnemonicParsing="false" onAction="#home" opacity="0.0" prefHeight="30.0" prefWidth="30.0" text="Button" />
-      <Button layoutX="484.0" layoutY="393.0" mnemonicParsing="false" onAction="#Reschedule_appointment" opacity="0.0" prefHeight="47.0" prefWidth="54.0" text="Button" />
-      <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="489.0" layoutY="397.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="47.0" fitWidth="47.0" layoutX="484.0" layoutY="404.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/42d2c59101dccaea5fa5d3a902d1f83b.png" />
          </image>
       </ImageView>
-      <Button layoutX="422.0" layoutY="438.0" mnemonicParsing="false" onAction="#Reschedule_appointment" opacity="0.0" prefHeight="26.0" prefWidth="181.0" text="Button" />
-      <Label layoutX="422.0" layoutY="440.0" prefHeight="23.0" prefWidth="174.0" text="Reschedule Appointments">
+      <Button fx:id="Home" layoutX="766.0" layoutY="-4.0" mnemonicParsing="false" onAction="#home" opacity="0.0" prefHeight="30.0" prefWidth="30.0" text="Button" />
+      <Button layoutX="483.0" layoutY="403.0" mnemonicParsing="false" onAction="#Reschedule_appointment" opacity="0.0" prefHeight="41.0" prefWidth="47.0" text="Button" />
+      <Button layoutX="421.0" layoutY="445.0" mnemonicParsing="false" onAction="#Reschedule_appointment" opacity="0.0" prefHeight="26.0" prefWidth="181.0" text="Button" />
+      <Label layoutX="424.0" layoutY="447.0" prefHeight="23.0" prefWidth="174.0" text="Reschedule Appointments">
          <font>
             <Font name="Calisto MT Bold" size="15.0" />
          </font>
