--- a/src/application/CancelAppointmentToReschedule.fxml
+++ b/src/application/CancelAppointmentToReschedule.fxml
@@ -22,9 +22,9 @@
             <Image url="@Images/25694.png" />
          </image>
       </ImageView>
-      <TextField fx:id="AppID" layoutX="459.0" layoutY="132.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
-      <TextField fx:id="name1" layoutX="459.0" layoutY="215.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
-      <TextField fx:id="cnic1" layoutX="459.0" layoutY="299.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
+      <TextField fx:id="AppID2" layoutX="459.0" layoutY="132.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
+      <TextField fx:id="name2" layoutX="459.0" layoutY="215.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
+      <TextField fx:id="cnic2" layoutX="459.0" layoutY="299.0" style="-fx-background-radius: 10; -fx-background-color: #6accb2;" />
       <Label layoutX="302.0" layoutY="130.0" prefHeight="30.0" prefWidth="113.0" text="Appointment ID">
          <font>
             <Font name="System Bold Italic" size="14.0" />
@@ -39,7 +39,7 @@
             <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="399.0" layoutY="37.0" prefHeight="35.0" prefWidth="239.0" text="Appointment Details">
+      <Label layoutX="399.0" layoutY="37.0" prefHeight="35.0" prefWidth="239.0" text="Cancel Appointment">
          <font>
             <Font name="System Bold Italic" size="22.0" />
          </font>
@@ -54,8 +54,8 @@
             <Image url="@Images/152533.png" />
          </image>
       </ImageView>
-      <Button layoutX="474.0" layoutY="386.0" mnemonicParsing="false" onAction="#getCancelled" opacity="0.0" prefHeight="60.0" prefWidth="60.0" text="Button" />
-      <Text fx:id="Promptc" fill="#9c0505" layoutX="436.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0">
+      <Button layoutX="474.0" layoutY="386.0" mnemonicParsing="false" onAction="#CanceltoReschedule" opacity="0.0" prefHeight="60.0" prefWidth="60.0" text="Button" />
+      <Text fx:id="Promptd" fill="#9c0505" layoutX="436.0" layoutY="364.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
