--- a/src/application/MakePayment.fxml
+++ b/src/application/MakePayment.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -26,15 +27,16 @@
          </image>
       </ImageView>
       <Button fx:id="Pay" layoutX="405.0" layoutY="312.0" mnemonicParsing="false" onAction="#Payment" opacity="0.0" prefHeight="49.0" prefWidth="109.0" text="Button" />
-      <Label layoutX="229.0" layoutY="197.0" text="Your total payment is ">
+      <Label layoutX="251.0" layoutY="121.0" text="Please choose your mode of payment">
          <font>
             <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="479.0" layoutY="197.0">
+      <Label fx:id="Fee" layoutX="202.0" layoutY="319.0">
          <font>
             <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
+      <ComboBox fx:id="descBox" layoutX="378.0" layoutY="176.0" prefWidth="150.0" style="-fx-background-radius: 15; -fx-background-color: #3db1ab;" />
    </children>
 </AnchorPane>
