--- a/src/application/MakePayment.fxml
+++ b/src/application/MakePayment.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="797.0" style="-fx-background-color: w;" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PaymentHandler">
    <children>
-      <ImageView fitHeight="536.0" fitWidth="796.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="536.0" fitWidth="796.0" layoutX="1.0" layoutY="-19.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/v870-tang-36.jpg" />
          </image>
@@ -21,15 +22,15 @@
             <Image url="@Images/25694.png" />
          </image>
       </ImageView>
-      <ImageView disable="true" fitHeight="99.0" fitWidth="98.0" layoutX="411.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView disable="true" fitHeight="99.0" fitWidth="98.0" layoutX="475.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Images/3745576.png" />
          </image>
       </ImageView>
-      <Button fx:id="Pay" layoutX="405.0" layoutY="312.0" mnemonicParsing="false" onAction="#Payment" opacity="0.0" prefHeight="49.0" prefWidth="109.0" text="Button" />
-      <Label layoutX="251.0" layoutY="121.0" text="Please choose your mode of payment">
+      <Button layoutX="475.0" layoutY="327.0" mnemonicParsing="false" onAction="#Payment" opacity="0.0" prefHeight="54.0" prefWidth="98.0" text="Button" />
+      <Label layoutX="242.0" layoutY="149.0" text="Please choose your mode of payment">
          <font>
-            <Font name="System Bold Italic" size="24.0" />
+            <Font name="System Bold Italic" size="18.0" />
          </font>
       </Label>
       <Label fx:id="Fee" layoutX="202.0" layoutY="319.0">
@@ -37,6 +38,12 @@
             <Font name="System Bold Italic" size="24.0" />
          </font>
       </Label>
-      <ComboBox fx:id="descBox" layoutX="378.0" layoutY="176.0" prefWidth="150.0" style="-fx-background-radius: 15; -fx-background-color: #3db1ab;" />
+      <ComboBox fx:id="descBox" layoutX="592.0" layoutY="150.0" prefWidth="150.0" style="-fx-background-radius: 15; -fx-background-color: #3db1ab;" />
+      <Label layoutX="299.0" layoutY="220.0" text="Re-enter your AppointmentID ">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="AppID2" layoutX="592.0" layoutY="221.0" style="-fx-background-radius: 15; -fx-background-color: #3db1ab;" />
    </children>
 </AnchorPane>
